added volume issue message

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 
 <div class="container" id="step2" style="display:none;">
   <h2>Watch: Spear Phishing Awareness Training</h2>
+  <h4>If you dont hear the audio, please make sure to <b style="color: red;">disable silent mode on your phone</b> and increase volume</h4>
   <iframe src="https://www.canva.com/design/DAGteI4udOQ/vAMfU6NHgkrk_e0lYyvOpA/watch?embed" allowfullscreen></iframe>
   <button onclick="nextStep()">Continue to Knowledge Test</button>
 </div>
